Fixed spacing on listings of tags, categories, and paginations

--- a/theme_components/sass/layout/_post-pagination.scss
+++ b/theme_components/sass/layout/_post-pagination.scss
@@ -51,6 +51,10 @@
 .post-pagination {
 	ul {
 		background-color: $blue;
+		display: flex;
+		flex-wrap: wrap;
+		gap: 6px;
+		justify-content: center;
 		margin: 0 40px;
 		padding: 4px;
 		position: relative;
